# cookiecutter-py-mac-tool

./: README.md  cookiecutter.json  test.sh
hooks/: post_gen_project.py
{{cookiecutter.app_name}}/: .gitignore  LICENSE.md  README.md  release.sh  setup.cfg  setup.py
{{cookiecutter.app_name}}/autopkg-recipe/: PythonBDistBuilder.py  {{cookiecutter.app_name}}.pkg.recipe
{{cookiecutter.app_name}}/tests/: test_sample.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: __init__.py
