[aliases]
test=pytest

[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[bumpversion]
current_version = {{cookiecutter.version}} 
commit = True 
tag = True

[tool:pytest]
addopts = --verbose

[bumpversion:file:setup.py]
[bumpversion:file:README.md]
[bumpversion:file:autopkg-recipe/{{cookiecutter.app_name}}.pkg.recipe]
[bumpversion:file:{{cookiecutter.app_name}}/__init__.py]

